kube-yml/OLD-nginx-deployment-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
spec:
  replicas: 1
  template:
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: nginx2-pvc-vol
          mountPath: /var/www/html
      volumes:
      - name: nginx2-pvc-vol
        persistentVolumeClaim:
          claimName: nginx2
