kube-yml/nginx-deployment-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test-namespace
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
          name: nginx
        volumeMounts:
        - name: nginx-pvc-vol
          mountPath: "/usr/share/nginx/html"
      volumes:
      - name: nginx-pvc-vol
        persistentVolumeClaim:
          claimName: nginx-pvc
