kube-yml/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-namespace
  name: redis-deployment
  labels:
    app: redis-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-test
  template:
    metadata:
      labels:
        app: redis-test
    spec:
      containers:
      - name: redis-test
        image: redis	
        ports:
        - containerPort: 6379
