kube-yml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-namespace
  name: nginx-service
  labels:
    app: nginx-service
spec:         
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx-tcp-port
      port: 80
      targetPort: 80
      nodePort: 30003
  type: NodePort
