kube-yml/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service 
  namespace: test-namespace
spec:
  selector:
    app: redis-test
  ports:
    - protocol: TCP
      name: redis-tcp-port
      port: 6379
      targetPort: 6379
  type: NodePort
