kube-yml/test-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: testsvc
          servicePort: 80
